# cpp-quickjs

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  quickjs_cpp_wrapper_demo.cpp  xmake.lua
.codebase-memory/: artifact.json  graph.db.zst
example/: main.cpp
qjs/: call_args.hpp  common.inc.hpp  context.hpp  detail.hpp  error.hpp  expose.hpp  module_loader.hpp  property_ref.hpp  qjs.hpp  runtime.hpp  scoped_context.hpp  standard_module.hpp  type_builder.hpp  value.hpp  value_impl.hpp
src/engine/: argument.cpp  arguments.h  context.cpp  context.h  error.cpp  error.h  promise.cpp  promise.h  runtime.cpp  runtime.h  value.cpp  value.h
